correction on api contact added
