# controllers/user.js
@@ -1,8 +1,11 @@
- const mongodb = require('../data/database');
+const mongodb = require('../data/database');
 const { ObjectId } = require('mongodb');
+
+// ==================== USER FUNCTIONS ====================
 
 const getAll = async (req, res) => {
     //#swagger.tags=['User']
+
     try {
         const result = await mongodb
             .getDatabase()
@@ -22,6 +25,7 @@ const getAll = async (req, res) => {
 
 const getsingle = async (req, res) => {
     //#swagger.tags=['User']
+
     try {
         if (!ObjectId.isValid(req.params.id)) {
             return res.status(400).json({
@@ -53,12 +57,15 @@ const getsingle = async (req, res) => {
 };
 
 const createuser = async (req, res) => {
-    //#swagger.tags=['User']    
+    //#swagger.tags=['User']
+
     try {
         const user = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
             email: req.body.email,
-            username: req.body.username,
-            name: req.body.name
+            favoriteColor: req.body.favoriteColor,
+            birthday: req.body.birthday
         };
 
         const response = await mongodb
@@ -87,6 +94,7 @@ const createuser = async (req, res) => {
 
 const updateuser = async (req, res) => {
     //#swagger.tags=['User']
+
     try {
         if (!ObjectId.isValid(req.params.id)) {
             return res.status(400).json({
@@ -97,9 +105,11 @@ const updateuser = async (req, res) => {
         const userId = new ObjectId(req.params.id);
 
         const user = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
             email: req.body.email,
-            username: req.body.username,
-            name: req.body.name
+            favoriteColor: req.body.favoriteColor,
+            birthday: req.body.birthday
         };
 
         const response = await mongodb
@@ -128,6 +138,7 @@ const updateuser = async (req, res) => {
 
 const deleteuser = async (req, res) => {
     //#swagger.tags=['User']
+
     try {
         if (!ObjectId.isValid(req.params.id)) {
             return res.status(400).json({
@@ -160,10 +171,230 @@ const deleteuser = async (req, res) => {
     }
 };
 
+// ==================== CONTACT FUNCTIONS ====================
+
+const getAllContacts = async (req, res) => {
+    //#swagger.tags=['Contact']
+
+    try {
+        const result = await mongodb
+            .getDatabase()
+            .collection('contacts')
+            .find()
+            .toArray();
+
+        res.status(200).json(result);
+    } catch (err) {
+        console.error('Error getting all contacts:', err);
+
+        res.status(500).json({
+            error: 'Failed to get contacts'
+        });
+    }
+};
+
+const getSingleContact = async (req, res) => {
+    //#swagger.tags=['Contact']
+
+    try {
+        if (!ObjectId.isValid(req.params.id)) {
+            return res.status(400).json({
+                error: 'Invalid contact ID'
+            });
+        }
+
+        const contactId = new ObjectId(req.params.id);
+
+        const contact = await mongodb
+            .getDatabase()
+            .collection('contacts')
+            .findOne({ _id: contactId });
+
+        if (!contact) {
+            return res.status(404).json({
+                error: 'Contact not found'
+            });
+        }
+
+        res.status(200).json(contact);
+    } catch (err) {
+        console.error('Error getting contact:', err);
+
+        res.status(500).json({
+            error: 'Failed to get contact'
+        });
+    }
+};
+
+const createContact = async (req, res) => {
+    //#swagger.tags=['Contact']
+
+    try {
+        const {
+            firstName,
+            lastName,
+            email,
+            favoriteColor,
+            birthday
+        } = req.body;
+
+        if (
+            !firstName ||
+            !lastName ||
+            !email ||
+            !favoriteColor ||
+            !birthday
+        ) {
+            return res.status(400).json({
+                error:
+                    'firstName, lastName, email, favoriteColor, and birthday are required'
+            });
+        }
+
+        const contact = {
+            firstName,
+            lastName,
+            email,
+            favoriteColor,
+            birthday
+        };
+
+        const response = await mongodb
+            .getDatabase()
+            .collection('contacts')
+            .insertOne(contact);
+
+        if (response.acknowledged) {
+            return res.status(201).json({
+                message: 'Contact created successfully',
+                contactId: response.insertedId
+            });
+        }
+
+        return res.status(500).json({
+            error: 'Some error occurred while creating contact'
+        });
+    } catch (err) {
+        console.error('Error creating contact:', err);
+
+        res.status(500).json({
+            error: 'Failed to create contact'
+        });
+    }
+};
+
+const updateContact = async (req, res) => {
+    //#swagger.tags=['Contact']
+
+    try {
+        if (!ObjectId.isValid(req.params.id)) {
+            return res.status(400).json({
+                error: 'Invalid contact ID'
+            });
+        }
+
+        const {
+            firstName,
+            lastName,
+            email,
+            favoriteColor,
+            birthday
+        } = req.body;
+
+        if (
+            !firstName ||
+            !lastName ||
+            !email ||
+            !favoriteColor ||
+            !birthday
+        ) {
+            return res.status(400).json({
+                error:
+                    'firstName, lastName, email, favoriteColor, and birthday are required'
+            });
+        }
+
+        const contactId = new ObjectId(req.params.id);
+
+        const contact = {
+            firstName,
+            lastName,
+            email,
+            favoriteColor,
+            birthday
+        };
+
+        const response = await mongodb
+            .getDatabase()
+            .collection('contacts')
+            .replaceOne(
+                { _id: contactId },
+                contact
+            );
+
+        if (response.matchedCount === 0) {
+            return res.status(404).json({
+                error: 'Contact not found'
+            });
+        }
+
+        return res.status(204).send();
+    } catch (err) {
+        console.error('Error updating contact:', err);
+
+        res.status(500).json({
+            error: 'Failed to update contact'
+        });
+    }
+};
+
+const deleteContact = async (req, res) => {
+    //#swagger.tags=['Contact']
+
+    try {
+        if (!ObjectId.isValid(req.params.id)) {
+            return res.status(400).json({
+                error: 'Invalid contact ID'
+            });
+        }
+
+        const contactId = new ObjectId(req.params.id);
+
+        const response = await mongodb
+            .getDatabase()
+            .collection('contacts')
+            .deleteOne({
+                _id: contactId
+            });
+
+        if (response.deletedCount === 0) {
+            return res.status(404).json({
+                error: 'Contact not found'
+            });
+        }
+
+        return res.status(204).send();
+    } catch (err) {
+        console.error('Error deleting contact:', err);
+
+        res.status(500).json({
+            error: 'Failed to delete contact'
+        });
+    }
+};
+
 module.exports = {
+    // Week 1 User functions
     getAll,
     getsingle,
     createuser,
     updateuser,
-    deleteuser
+    deleteuser,
+
+    // Week 2 Contact functions
+    getAllContacts,
+    getSingleContact,
+    createContact,
+    updateContact,
+    deleteContact
 };
